--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,8 +7,11 @@
  *
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
+ **/
+/* *= require_self
+ *= require jquery-ui-1.10.3.custom.min.css
  *= require foundation_and_overrides
- *= require_tree .
- */
+
+ *= require_tree .*/
+ 
+ 
