--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,8 @@
 
 <h2>Your Progress</h2>
 <h3><% get_progress_report(@user, @courses)%></h3>
-<h3><%= @subject_completed%>: <%= @status%></h3>
+<h3><%= @subject %>: <%= @status%></h3>
 
 <%= link_to 'Back', users_path%>
+<%= link_to 'Back to Lessons', users_subjects_path(@user.id)
 
