--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,5 @@
 <h3><%= @subject %>: <%= @status%></h3>
 
 <%= link_to 'Back', users_path%>
-<%= link_to 'Back to Lessons', users_subjects_path(@user.id)
+<%= link_to 'Back to Lessons', user_subjects_path(@user.id)%>
 
