--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,12 +63,12 @@
         
        
 
-    <p class="notice">
+    <!-- <p class="notice">
       <%= notice unless notice.blank? %>
     </p>
     <p class="alert">
       <%= alert unless alert.blank? %>
-    </p>
+    </p> -->
 
     <%= yield %>
     
