--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -22,12 +22,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :text_choices, "a:" %><br>
-    <%= f.text_area :text_choices %>
-  </div>
-  <div class="field">
-    <%= f.label :text_choices, "b:" %><br>
-    <%= f.text_area :text_choices %>
+    <% 5.times.each do |n| %>
+    <%= f.label :choices %><br>
+    <%= @each_choice = f.text_area :choices%>
+    <% @question.choices = @question.choices.push(@each_choice) %>
+    <% end %>
   </div>
   
   <div class="field">
