--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -21,12 +21,18 @@
     <%= f.file_field :image %>
   </div>
 
+<!--   <div class="field">
+    <%# 2.times.each do |n| %>
+    <%#= f.label :text_choices, "Choices" %><br>
+    <%#= f.text_field_tag :text_choices, params[:text_choices]%>
+    <%#= f.text_field :text_choices%>
+    
+    <%# end %>
+  </div> -->
+
   <div class="field">
-    <% 5.times.each do |n| %>
-    <%= f.label :choices %><br>
-    <%= @each_choice = f.text_area :choices%>
-    <% @question.choices = @question.choices.push(@each_choice) %>
-    <% end %>
+    <%= f.label :text_choices, "Choices" %><br>
+    <%= f.text_area :text_choices %>  
   </div>
   
   <div class="field">
