--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,33 +1,22 @@
-<h1>Listing pages</h1>
+<h1>Lesson pages for <%= @subject.name %></h1>
 
 <table width="100%" cellpadding="0" cellspacing="0">
   <thead>
     <tr>
       <th>Sequence</th>
-      <th>Pageable</th>
-      <th>Pageable type</th>
-      <th>Subject</th>
-      <th>Body</th>
+      <th>Page Type</th>
+      <th>Content</th>
       
     </tr>
   </thead>
 
-<p> <%#= @pages.pageable %> </p>
-
   <tbody>
-  
-    <% @pages.each do |page| %>
+   
+    <% @subject.page_order.each do |page| %>
       <tr>
         <td><%= page.sequence_id %></td>
-        <td><%= page.pageable_id %></td>
         <td><%= page.pageable_type %></td>
-        <td><%= page.subject.name %></td>
-        <% if page.pageable %>
-          <td><%= page.pageable.body %></td>  
-        <% else %>
-          <td><%= "Please add content" %></td>
-        <% end %>
-        <!-- <td><%#= show_body(page.pageable) %></td>  -->
+        <td><%= page.body_snippet %></td>  
         <td><%= link_to "Show Page" , admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
         <td><%= link_to 'Destroy', admin_subject_page_path(@subject, page), method: :delete %></td>
