--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -980,7 +980,7 @@ $default-float: left;
 // We use this to se the prog bar height
 
 // $progress-bar-height: em-calc(25);
-// $progress-bar-color: #5da423;
+// $progress-bar-color: transparent;
 
 // We use these to control the border styles
 
@@ -996,9 +996,9 @@ $default-float: left;
 
 // We use these to set the meter colors
 
-// $progress-meter-color: #5da423;
+// $progress-meter-color: $primary;
 // $progress-meter-secondary-color: $secondary-color;
-$progress-meter-success-color: transparent;
+// $progress-meter-success-color: $primary-color;
 // $progress-meter-alert-color: $alert-color;
 
 //
