--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,32 +1,100 @@
-<h1><%= @question.body %><br></h1>
-<p>Choose the Correct Answer:</p>
-<div class="field">
-    <div class="choices">
-			<% @question.choices.each do |choice| %>
-	    	<div class="choice" >
-		    	<%= radio_button :question, :choices, choice %>
-		    	<%= choice %><br>
-		    </div>		       	
-    	<%end%>
-    	<div class="submit">
-				<button type="button">Check Answer</button> 
-			</div>
-    </div>      
-  </div> 
-</div>
+<meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/4.3.1/css/foundation.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js" type="text/javascript"></script>
+<!-- Header and Nav -->
+  
+  <div class="row">
+    <div class="large-3 columns">
+      <h1></h1>
+    </div>
+    <div class="large-9 columns">
+    	
+      <ul class="inline-list right">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Your Progress</a></li>
+        <li><a href="#">All Lessons</a></li>
+        <li><a href="#"></a>Sign Out</li>
+      </ul>
+    
+    </div>
+  </div>
+  
+  <!-- End Header and Nav -->
+  
+  
+  <div class="row">    
+    
+    <!-- Main Content Section -->
+    <!-- This has been source ordered to come first in the markup (and on small devices) but to be to the right of the nav on larger screens -->
+    <div class="large-9 push-3 columns">
+      
+         
+    <!-- Nav Sidebar -->
+    <!-- This is source ordered to be pulled to the left on larger screens -->
+    
+      <ul class="side-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Your Progress</a></li>
+        <li><a href="#">All Lessons</a></li>
 
-<div class="show" visibility: hidden>
-	<%= link_to "Next Page", next_page(@user, @question.page)%>
-</div>
-<div class="message">
-</div>
-<!-- <div class="progress" visibility: hidden>
-	<span class="meter"></span>
-</div> -->
-<div class="progress large-6 success round" visibility: hidden>
-	<span class="meter"></span>
-</div>
+      </ul>
+      
+       	<h3><%= @question.body %></h3
+					<p>Choose the Correct Answer:</p>
+						<div class="field">
+    					<div class="choices">
+								<% @question.choices.each do |choice| %>
+						    	<div class="choice" >
+							    	<%= radio_button :question, :choices, choice %>
+							    	<%= choice %><br>
+		    					</div>		       	
+    						<%end%>
+    							<div class="submit">
+										<button type="button">Check Answer</button> 
+									</div>
+    					</div>      
+  					</div>
+  					<br> 
+  					<div class="show" visibility: hidden>
+							<h3><%= link_to "Next Page", next_page(@user, @question.page)%></h3><br>
+						</div>
+					
+			
+  					<!-- Content here -->
 
+					<div class="panel callout" visibility: hidden >
+							<h2></h2>
+						<%= progress_bar(progress(@user, @question.page))%>
+				</div>
+				
+					  
+			</div>  
+  </div>
+    
+  
+  <!-- Footer -->
+  
+  <footer class="row">
+    <div class="large-12 columns">
+      <hr />
+      <div class="row">
+        <div class="large-6 columns">
+          <p>&copy; Copyright Prepify LLC.</p>
+        </div>
+        <div class="large-6 columns">
+          <ul class="inline-list right">
+            <li><a href="#">Home</a></li>
+		        <li><a href="#">Your Progress</a></li>
+		        <li><a href="#">All Lessons</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> 
+  </footer>
+  </body>
 
 <script type="text/javascript">	
 
@@ -36,23 +104,20 @@
 		var user_choice = $('.choice input:checked').val();
 		// Compare with actual answer
 		if (user_choice == <%= @question.correct_answer%>){
-			$('.message').append("Correct!");
+			$('.panel').toggle("clip");
+			$('.panel h2').append("Correct!");
 			$('.submit').toggle();
-			$('.show').toggle();
+			$('.show').toggle("clip");
 			$('.progress').toggle();
-			$('.meter').progressbar({
-				value: <%= progress(@user, @question.page) %>
-			});
+			$('.progress').show();
 
 		}
 		else {
 			$('.message').append("Incorrect!");
 			$('.submit').toggle();
 			$('.show').toggle();
-			$('.progress').toggle();
-			$('.meter').progressbar({
-				value: <%= progress(@user, @question.page) %>
-			});
+			$('.progress').show();
+			
 		}		
 	});
 </script>
