--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,12 @@
 </p>
 
 <h2>Your Progress</h2>
-<h3><% get_progress_report(@user, @courses)%></h3>
-<h3><%= @subject %>: <%= @status%></h3>
+
+<%= progress_report(@user, @courses)%>
+
+<div class="panel">
+
+</div>
 
 <%= link_to 'Back', users_path%>
 <%= link_to 'Back to Lessons', user_subjects_path(@user.id)%>
