Change seed data so question saves

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,13 +62,13 @@
         <% end %>
         
        
-
+<!-- 
     <p class="notice">
-      <%= notice unless notice.blank? %>
+      <%#= notice unless notice.blank? %>
     </p>
     <p class="alert">
-      <%= alert unless alert.blank? %>
-    </p>
+      <%#= alert unless alert.blank? %>
+    </p> -->
 
     <%= yield %>
     
