--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Admin:</strong>
-  <%= @user.admin %>
-
-</p>
 
 <h2>Your Progress</h2>
 <div class="panel">
-<%= progress_report(@user, @courses)%>
+<%= progress_report(@courses)%>
 </div>
 
 <%= link_to 'Back', users_path%>
-<%= link_to 'Back to Lessons', user_subjects_path(@user.id)%>
+<%= link_to 'Back to Lessons', user_subjects_path(@user)%>
 
