--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,9 @@
     <nav class="top-bar">
       <% if current_user.try(:admin?) %>
 
-      <ul class="title-area">        
-        <li class="logo">
-          <h1><img src="/app/assets/images/school_logo.jpg">
+       <ul class="title-area">        
+        <li class="name">
+          <h1><strong><%= link_to "Hello #{current_user.name}", edit_user_registration_path%></strong>
           </h1>
         </li>
       </ul>
