--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,90 +1,94 @@
-<meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/4.3.1/css/foundation.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js" type="text/javascript"></script>
-<!-- Header and Nav -->
-<% content_for(:body_id, "lesson_pages") %>   
-  <div class="row">
-    <div class="large-3 columns">
-      <h1></h1>
-    </div>
-  </div>
+<% content_for(:body_id, "lesson_pages")%> 
+<head>
+    <title>So Boxy</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/4.3.1/css/foundation.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
+  </head>
   
-  <!-- End Header and Nav -->
-  
-  
-  <div class="row">    
+  <body>
     
-    <!-- Main Content Section -->
-    <!-- This has been source ordered to come first in the markup (and on small devices) but to be to the right of the nav on larger screens -->
-    <div class="large-9 push-3 columns">
-      
-         
-    <!-- Nav Sidebar -->
-    <!-- This is source ordered to be pulled to the left on larger screens -->
-    
-      <!-- <ul class="side-nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Your Progress</a></li>
-        <li><a href="#">All Lessons</a></li>
-
-      </ul> -->
-      
-       	<h3><%= @question.body %></h3
-					<p>Choose the Correct Answer:</p>
-						<div class="field">
-    					<div class="choices">
-								<% @question.choices.each do |choice| %>
-						    	<div class="choice" >
-							    	<%= radio_button :question, :choices, choice %>
-							    	<%= choice %><br>
-		    					</div>		       	
-    						<%end%>
-    							<div class="submit">
-										<button type="button">Check Answer</button> 
-									</div>
-    					</div>      
-  					</div>
-  					<br> 
-  					<div class="show" visibility: hidden>
-							<h3><%= link_to "Next Page", next_page(@user, @question.page)%></h3><br>
-						</div>
-					
-			
-  					<!-- Content here -->
-
-					<div class="panel callout" visibility: hidden >
-							<h2></h2>
-						<%= progress_bar(progress(@question.page))%>
-				</div>
-				
-					  
-			</div>  
-  </div>
-    
-  
-  <!-- Footer -->
-  
-  <footer class="row">
-    <div class="large-12 columns">
-      <hr />
-      <div class="row">
-        <div class="large-6 columns">
-          <p>&copy; Copyright Prepify LLC.</p>
-        </div>
-        <div class="large-6 columns">
-          <ul class="inline-list right">
-            <li><a href="#">Home</a></li>
-		        <li><a href="#">Your Progress</a></li>
-		        <li><a href="#">All Lessons</a></li>
-          </ul>
+<br>
+        <div class="row">
+          <div class="columns large-12 large-centered">
+            <div class="radius panel">
+              <h3><%= @question.page.subject.name %></h3>       
+            </div>
+          </div>
         </div>
       </div>
-    </div> 
-  </footer>
+        <!-- End Header Content -->
+        <!-- Search Bar -->
+        <div class="row">
+          <div class="columns large-12 large-centered">
+            <div class="radius panel">
+              <h3><%= @question.body %></h3>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-12 show-for-small columns">
+            <h4>Choose the Correct Answer:</h4>
+            <hr>
+          </div>
+                  
+            <div class="panel">
+             <div class="field">
+              <div class="choices">
+                <% @question.choices.each do |choice| %>
+                  <div class="choice" >
+                    <%= radio_button :question, :choices, choice %>
+                    <%= choice %><br>
+                  </div>            
+                <%end%>
+              </div>            
+        
+          <div class="submit">
+            <button class="button small round" type="button">Check Answer</button> 
+          </div>
+        </div>
+        <!-- End Search Bar -->
+        <!-- Thumbnails -->
+        
+          
+          <div class="large-8 small-6 columns"> 
+            <div class="panel callout" visibility: hidden >
+              <h2></h2>
+              <h3><%= link_to 'Next Page', next_page(@user, @question.page)%></h3>
+            <%= progress_bar(progress(@question.page))%>
+            </div>
+          </div>
+        <!-- End Thumbnails -->
+        <!-- Footer -->
+        <footer class="row">
+          <div class="large-12 columns">
+            <hr>
+            <div class="row">
+              <div class="large-6 columns">
+                <p>&copy; Copyright Prepify LLC</p>
+              </div>
+              <div class="large-6 columns">
+                <ul class="inline-list right">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Your Progress</a></li>    
+                  <li><a href="#">All Lessons</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </footer>
+        <!-- End Footer -->
+      </div>
+    </div>
   </body>
+
+</html>
+
+      
+    
 
 <script type="text/javascript">	
 
