--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,25 +1,26 @@
-<h1>Listing subjects</h1>
+<div class="row">
+  <div class="columns large-12 large-centered">
+    <h1>All Lessons</h1>
+  </div>
+</div>  
 
-<table>
-  <thead>
-    <tr>
-      <th>Section</th>
-      <th>Name</th>
-      
-    </tr>
-  </thead>
+<body>
+  <% @subjects.each do |subject| %>
+  <div class="row">
+    <div class="columns large-12 large-centered">
+      <div class="radius panel">
+        <h3><%= subject.name %></h3>
+        <h3><%= link_to "Start Lesson", start_page(@user, subject) %><h3>
+      </div>
+    </div>
+  </div>
+  <% end %>
+  <div class="row">
+    <div class="columns large-12-centered">
+      <%= link_to 'Home', user_path(@user) %>
+    </div>
+  </div>
+</body>
 
-  <tbody>
-    <% @subjects.each do |subject| %>
-      <tr>
-        <td><%= subject.section %></td>
-        <td><%= subject.name %></td>
-        <td><%= link_to "Start Lesson", start_page(@user, subject) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-<%# link_to 'Back', subjects_path %>
 
