--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,18 @@
-
-<h2>Your Progress</h2>
-
-<%= progress_report(@courses)%>
-
-
-<%= link_to 'Back', users_path%>
-<%= link_to 'Back to Lessons', user_subjects_path(@user)%>
+<% content_for(:body_id, "lesson_pages") %> 
+<div class="row">
+  <div class="columns large-12 large-centered">
+		<h2>Your Progress</h2>
+	</div>
+</div>
+<div class="row">
+  <div class="columns large-12 large-centered">
+		<h3><%= progress_report(@courses)%></h3>
+	</div>
+</div>
+<div class="row">
+  <div class="columns large-12 large-centered">
+		<%= link_to 'Back', users_path%>
+		<%= link_to 'Back to Lessons', user_subjects_path(@user)%>
+	</div>
+</div>
 
