put background pattern for main lesson page and progress report view

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,10 +1,12 @@
+<% content_for(:body_id, "lesson_pages")%> 
+<body>
 <div class="row">
   <div class="columns large-12 large-centered">
     <h1>All Lessons</h1>
   </div>
 </div>  
 
-<body>
+
   <% @subjects.each do |subject| %>
   <div class="row">
     <div class="columns large-12 large-centered">
