--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<% content_for(:body_id, "lesson_pages") %> 
+<% content_for(:body_id, "lesson_pages")%> 
+
+<body>
 <div class="row">
   <div class="columns large-12 large-centered">
 		<h2>Your Progress</h2>
@@ -15,4 +17,4 @@
 		<%= link_to 'Back to Lessons', user_subjects_path(@user)%>
 	</div>
 </div>
-
+</body>
