--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -14,28 +14,17 @@
 <br>
         <div class="row">
           <div class="columns large-12 large-centered">
-            <div class="radius panel">
+            <div class="radius panel callout ">
               <h3><%= @question.page.subject.name %></h3>       
             </div>
           </div>
         </div>
       </div>
         <!-- End Header Content -->
-        <!-- Search Bar -->
-        <div class="row">
+         <div class="row">
           <div class="columns large-12 large-centered">
-            <div class="radius panel">
-              <h3><%= @question.body %></h3>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-12 show-for-small columns">
-            <h4>Choose the Correct Answer:</h4>
-            <hr>
-          </div>
-                  
             <div class="panel">
+              <h3><%= @question.body %></h3>
              <div class="field">
               <div class="choices">
                 <% @question.choices.each do |choice| %>
@@ -44,7 +33,9 @@
                     <%= choice %><br>
                   </div>            
                 <%end%>
-              </div>            
+              </div> 
+            </div>
+          </div>           
         
           <div class="submit">
             <button class="button small round" type="button">Check Answer</button> 
@@ -56,9 +47,9 @@
           
           <div class="large-8 small-6 columns"> 
             <div class="panel callout" visibility: hidden >
-              <h2></h2>
+             <h4></h4>
               <h3><%= link_to 'Next Page', next_page(@user, @question.page)%></h3>
-            <%= progress_bar(progress(@question.page))%>
+              <h3><%= progress_bar(progress(@question.page))%></h3>
             </div>
           </div>
         <!-- End Thumbnails -->
@@ -99,7 +90,7 @@
 		// Compare with actual answer
 		if (user_choice == <%= @question.correct_answer%>){
 			$('.panel').toggle("clip");
-			$('.panel h2').append("Correct!");
+			$('.panel h4').addClass('success label').append("Correct!");
 			$('.submit').toggle();
 			$('.show').toggle("clip");
 			$('.progress').toggle();
@@ -108,7 +99,8 @@
 
 		}
 		else {
-			$('.message').append("Incorrect!");
+      $('.panel').toggle('clip');
+			$('.panel h4').addClass('alert label').append("Incorrect!");
 			$('.submit').toggle();
 			$('.show').toggle();
 			$('.progress').toggle();
