--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -49,8 +49,10 @@
             <div class="panel callout" visibility: hidden >
              <h4></h4>
               <h3><%= link_to 'Next Page', next_page(@user, @question.page)%></h3>
-              <h3><%= progress_bar(progress(@question.page))%></h3>
+              <%= progress_bar(progress(@question.page))%>         
             </div>
+
+            
           </div>
         <!-- End Thumbnails -->
         <!-- Footer -->
