--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   	<%= javascript_include_tag 'vendor/custom.modernizr' %>
     
     <%= javascript_include_tag  'text/css'%> 
-    <%= javascript_include_tag "application" 'text/css'%>
+    <%= javascript_include_tag "application"%>
    
     <%= csrf_meta_tags %>
   </head>
