--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,8 +2,7 @@
 <head>
     <title>So Boxy</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/4.3.1/css/foundation.css">
+    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>
@@ -14,7 +13,7 @@
 <br>
         <div class="row">
           <div class="columns large-12 large-centered">
-            <div class="radius panel callout ">
+            <div class="radius panel ">
               <h3><%= @question.page.subject.name %></h3>       
             </div>
           </div>
