--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -15,11 +15,13 @@
 
 <div class="row">
 	<div class="columns large-12">
-		<li><h1><%= @instruction.body %></strong></h2><br></li>
+		<h1><%= @instruction.body %></strong></h2><br>
 	</div>
   <div class="columns large-12">
+    
     <img src="<%= @instruction.image %>" width="200" height="80">
     <br>
+    <div class="columns large-12">
     <div class="panel">
       <%= progress_bar( progress(@instruction.page) )%>
       <h5><%= link_to "Next Page", next_page(@user, @instruction.page)%></h5>
