--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:body_id, "admin_pages") %> 
+
+<div class="row">
+  <div class="columns large-12">
 <h1>Lesson pages for <%= @subject.name %></h1>
 
 <table width="100%" cellpadding="0" cellspacing="0">
@@ -19,11 +23,14 @@
         <td><%= page.body_snippet %></td>  
         <td><% if page.pageable_type == "Question" %>
           <%= link_to "Question Preview", admin_subject_question_path(@subject, page.pageable) %>
+          <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
+          <td><%= link_to 'Destroy', admin_subject_page_path(@subject, page), method: :delete %></td>
           <td><% elsif page.pageable_type == "Instruction" %>
           <%= link_to "Instruction Preview", admin_subject_instruction_path(@subject, page.pageable) %>
+          <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
+          <td><%= link_to 'Destroy', admin_subject_page_path(@subject, page), method: :delete %></td>
           <% end %>
-        <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
-        <td><%= link_to 'Destroy', admin_subject_page_path(@subject, page), method: :delete %></td>
+        
         
 
       
@@ -35,13 +42,19 @@
 </table>
 
 <br>
-<%= link_to "New Question Page", new_admin_subject_question_path%> 
+<div id = "add_buttons">
+  <a href="<%= new_admin_subject_question_path %>" class="button">Create A New Question</a>
+ 
+  <a href="<%= new_admin_subject_instruction_path %>" class="button">Create A New Instruction</a>
+ 
+  <br>
 
-<%= link_to "New Instruction Page", new_admin_subject_instruction_path
-%> 
+  <a href="<%= admin_subjects_path %>" class="small button">Back to <%= @subject.name %> Main Page</a>
+  
 
-<%= link_to "Back to Subject Page", admin_subjects_path
-%> 
+</div>
+  </div>
+</div>
 
 
 
