--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-<% content_for(:body_id, "lesson_pages")%> 
+<% content_for(:body_id, "admin_pages")%> 
 
 
 
@@ -36,7 +35,9 @@
         </div>
         <!-- End Search Bar -->
         <!-- Thumbnails -->
-            
+          <%= link_to "Edit Question Content" , edit_admin_subject_question_path(@subject, @question) %> 
+          <br>
+          <%= link_to "Back to #{@subject.name} page", admin_subject_pages_path(@subject) %>
           </div>
    
     
@@ -46,5 +47,3 @@
 
 
 
-<%= link_to "Edit Question Content" , edit_admin_subject_question_path(@subject, @question) %>
-<%= link_to "Back", admin_subject_pages_path(@subject) %>
