--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,8 @@
     
     <%= javascript_include_tag  'text/css'%> 
     <%= javascript_include_tag "application"%>
+    <!-- How to require topbar??? -->
+    <script src="js/foundation/foundation.topbar.js"></script>
    
     <%= csrf_meta_tags %>
   </head>
@@ -39,12 +41,18 @@
           <%= image_tag("Prepify_logo_white.png", size: "100") %>
         </li>
       </ul>
+      
       <section class="top-bar-section">
         <ul class="right">
-          <li>
-            <%= link_to "Hello #{current_user.name}", edit_user_registration_path%></strong>
-            <%= link_to 'Edit Profile', edit_user_registration_path %>
+          <li class= "has-dropdown"><a href="#">Hello <%= current_user.name %></a>
+            <%#= link_to "Hello #{current_user.name}", edit_user_registration_path%><!-- </strong> -->
+            <ul class= "dropdown">
+              <li>
+                <%= link_to 'Edit Profile', edit_user_registration_path %></li>
+            </ul>
           </li>
+
+          
           <li>
             <%= link_to "Sign out", destroy_user_session_path, method: :delete %> 
           </li>
