--- a/app/assets/stylesheets/subject.css.scss
+++ b/app/assets/stylesheets/subject.css.scss
@@ -84,6 +84,11 @@ background-size: 100% auto;
 	.radius {
 		border-radius: 10px;
 	}
-	
+
+	// .round {
+	// 	width: 500px;
+	// 	height: 500px;
+	// 	border-radius: 250px;
+	// }
 	
 }
