--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,17 +1,31 @@
 <% content_for(:body_id, "subject")%> 
 <body>
   <div class="row">
-    <div class="columns large-8 large-centered">
+    <div class="large-8-centered columns ">
       <h3>Get Prepared</h3>
     </div>
-  </div>  
+  </div> 
 
-
-  
-
-  <div class="large-8 columns">
+       <!-- First Band (Slider) -->
+    <div class="row">
+      <div class="large-12 columns centered columns">
+        <div class="panel">
+          <h3>Get Started with SAT Basics!</h3>          
+            <div class="slider">
+              <div class="main"><div class="round"><%= image_tag("basics.jpg")%></div>   
+                <div class="panel">
+                  <h5 class="subheader"><%= link_to "Start Course"%></h5>
+                </div>
+              </div>
+            </div>          
+          </div>
+          <hr>
+        </div>
+      </div>
+    </div>
+  <div class="large-8 centered columns">
           <div class="row">
-
+            #offset by 4
             <div class="large-4 small-6 columns">
               <%= image_tag("math-2.jpeg")%>
     
@@ -20,7 +34,7 @@
                 <h6 class="subheader"><%= link_to "See Courses"%></h6>
               </div>
             </div>
-
+            #center 
             <div class="large-4 small-6 columns">
               <%= image_tag("books-2.jpg")%>
 
@@ -29,7 +43,7 @@
                 <h6 class="subheader"><%= link_to "See Courses"%></h6>
               </div>
             </div>
-
+              #offset by 8
             <div class="large-4 small-6 columns">
               <%= image_tag("writing.jpeg")%>
 
