Change admin form views and subject index

--- a/app/assets/stylesheets/admin_pages.css.scss
+++ b/app/assets/stylesheets/admin_pages.css.scss
@@ -53,6 +53,14 @@ background-size: 100% auto;
 }
 }
 
-#add_buttons {
-  text-align:center;
-}
+  .add_buttons {
+    text-align:center;
+  }
+
+  .lesson_table {
+    margin:auto;
+  }
+
+  .lesson {
+    margin:auto;
+  }
