--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <%= javascript_include_tag  'text/css'%> 
     <%= javascript_include_tag "application"%>
     <!-- How to require topbar??? -->
-    <script src="js/foundation/foundation.topbar.js"></script>
+     <!-- <script src="js/foundation/foundation.topbar.js"></script> -->
    
     <%= csrf_meta_tags %>
   </head>
