--- a/app/views/admin/pages/edit.html.erb
+++ b/app/views/admin/pages/edit.html.erb
@@ -1,6 +1,18 @@
-<h1>Editing page</h1>
+<% content_for(:body_id, "admin_pages") %>
+<div class="row">
+  <div class="columns large-12">
+    <h1>Edit Page Sequence</h1>
+  </div>
+</div>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="small-6 small-2 columns">
+    <%= render 'form' %>
+</div>
 
-<%= link_to 'Show', admin_subject_page_path %> |
-<%= link_to 'Back', admin_subject_pages_path %>
+<div class="row">
+  <div class="columns large-12">
+  <%= link_to 'Show', admin_subject_page_path %> |
+  <%= link_to 'Back', admin_subject_pages_path %>
+  </div>
+</div>
