--- a/app/views/admin/subjects/edit.html.erb
+++ b/app/views/admin/subjects/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing subject</h1>
+<% content_for(:body_id, "admin_pages") %>
+<div class="row">
+  <div class="columns large-12">
+    <h1>Editing <%= @subject.name %></h1>
+  </div>
+</div>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="small-6 small-2 columns">
+    <%= render 'form' %>
+</div>
 
-
-<%= link_to 'Back', admin_subjects_path %>
+<div class="row">
+  <div class="columns large-12">
+    <%= link_to 'Back', admin_subjects_path %>
+  </div>
+</div>
