--- a/app/views/admin/subjects/new.html.erb
+++ b/app/views/admin/subjects/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New subject</h1>
+<% content_for(:body_id, "admin_pages") %>
+<div class="row">
+  <div class="columns large-12">
+    <h1>New subject</h1>
+  </div>
+</div>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="small-6 small-2 columns">
+    <%= render 'form' %>
+</div>
 
-<%= link_to 'Back', admin_subjects_path %>
+<div class="row">
+  <div class="columns large-12">
+  <%= link_to 'Back', admin_subjects_path %>
+
+  </div>
+</div>
