--- a/app/views/admin/subjects/show.html.erb
+++ b/app/views/admin/subjects/show.html.erb
@@ -12,5 +12,5 @@
 
 
 
-<%= link_to 'Edit', edit_subject_path(@subject) %> |
-<%= link_to 'Back', subjects_path %>
+<%#= link_to 'Edit', edit_subject_path(@subject) %> |
+<%#= link_to 'Back', subjects_path %>
