--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,7 +8,7 @@
         <div class="row">
           <div class="columns large-12 centered">
             <div class="radius panel callout ">
-              <h3><%= @question.page.subject.name %></h3>       
+              <h3><%= @subject.name %></h3>       
             </div>
           </div>
         </div>
@@ -41,8 +41,8 @@
           <div class="large-8 small-6 columns"> 
             <div class="panel " visibility: hidden >
              <h4></h4>
-              <h3><%= link_to 'Next Page', next_page(@user, @question.page)%></h3>
-              <%= progress_bar(progress(@question.page))%>         
+              <h3><%= link_to 'Next Page', next_page(current_user, @page)%></h3>
+              <%= progress_bar(progress(@page))%>         
             </div>
 
             
