--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -86,7 +86,7 @@ $default-float: left;
 
 // Make sure border radius matches unless we want it different.
 
-// $global-radius: 3px;
+$global-radius: 10px;
 // $global-rounded: 1000px;
 
 // Inset shadow shiny edges and depressions.
@@ -369,12 +369,12 @@ $default-float: left;
 // We use these to control button text styles.
 
 // $button-font-family: inherit;
-// $button-font-color: #fff;
+ $button-font-color: #fff;
 // $button-font-color-alt: #333;
 // $button-font-med: em-calc(16);
 // $button-font-tny: em-calc(11);
 // $button-font-sml: em-calc(13);
-// $button-font-lrg: em-calc(20);
+ $button-font-lrg: em-calc(18);
 // $button-font-weight: bold;
 // $button-font-align: center;
 
@@ -384,12 +384,12 @@ $default-float: left;
 
 // We use these to control button border styles.
 
-// $button-border-width: 1px;
+ $button-border-width: 1px;
 // $button-border-style: solid;
 
 // We use this to set the default radius used throughout the core.
 
-// $button-radius: $global-radius;
+ $button-radius: 10px;
 // $button-round: $global-rounded;
 
 // We use this to set default opacity for disabled buttons.
