--- a/app/assets/stylesheets/registrations.css.scss
+++ b/app/assets/stylesheets/registrations.css.scss
@@ -9,8 +9,11 @@ background-repeat: no-repeat;
 background-size: 100% auto;
 
 
+
+
 	#top {
-		
+		height: 450px;
+
 		.glowing-border {
     		border: 2px solid #dadada;
     		border-radius: 7px;
@@ -48,29 +51,23 @@ background-size: 100% auto;
 		text-align: center;
 		border-top-left-radius: 20px;
 		border-top-right-radius: 20px;
-		height: 100px;
-		//background-color: 
-
-		p {
-			font-family: 'Source Sans Pro', sans-serif;
-			font-size: 1.25em;
-			color: white;
-			line-height: 1.5em;
-			text-shadow:0px 0px 10px black;
-
-		}
-
-		p:first-letter {
-			font-size: 3em;
-			font-family: 'Sansita One';  
-			text-shadow: 4px 4px 0 #566074, 7px 7px 0 #338aaa;
-		}
+		height: 90px;
+		width: 700px;
+	
 
 		.button {
-			background-color: #19295B;
+			background-color: #2BA6CB;
 			color: white;
-			width: 150px;
-			border-radius: 25px;
+			width: 200px;
+			border: 5px solid white;
+			border-radius:15px;
+			font-family: 'Leckerli One', cursive;
+			font-size: 2em;
+			padding: 5px;
+		}
+
+		.button:hover {
+			background-color: #17596b;
 		}
 
 	}
@@ -80,6 +77,7 @@ background-size: 100% auto;
 		width: 90%;
 		height: 500px;
 		white-space: pre-wrap;
+
 
 		p {
 			font-size: 1.5em;
@@ -96,7 +94,10 @@ background-size: 100% auto;
 
 	}
 
-
+	.below:first-child {
+		border-top-right-radius: 30px;
+		border-top-left-radius: 30px; 
+	}
 
 
 
